week card gap corrected and links added to the footer

--- a/components/WeekCard/style.module.scss
+++ b/components/WeekCard/style.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 5px;
 
   padding: 5px;
 
